Implement nonce api (#51)
* Implement get nonce with address API

* Implement get nonce with pubkey  API

* Apply review recommendations
